--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/gruvbox-dark-medium.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/gruvbox-dark-medium.css
@@ -24,10 +24,6 @@ body[kui-theme="Gruvbox"] {
     --color-light-green: hsla(61, 66%, 44%, 0.75);
     --color-light-yellow: hsla(42, 95%, 58%, 0.75);
 
-    --color-scrollbar-thumb: #1E1C1B;
-    --color-scrollbar-thumb-border: #54514F;
-    --color-scrollbar-thumb-outline: #363230;
-
     --color-latency-0: #1b7837;
     --color-latency-1: #7fbf7b;
     --color-latency-2: #d9f0d3;
